# multi_scale_search

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.py  package.xml  requirements.txt  setup.py
scripts/: run_experiment.py
src/: config.py
src/auxiliary_files/: grid.py  item.py  path_planning.py  rectangle.py
src/low_fidelity_simulation/: config_low_fidelity_sim.py  gui_low_fidelity_sim.py  low_fidelity_sim.py  low_level_controller.py  worldmodel.py
src/low_fidelity_simulation/big_environment/models/: obs_prob_look_around.txt  obs_prob_nav(0,1).txt  obs_prob_nav(0,12).txt  obs_prob_nav(0,13).txt  obs_prob_nav(0,2).txt  obs_prob_nav(0,3).txt  obs_prob_nav(1,10).txt  obs_prob_nav(1,12).txt  obs_prob_nav(1,13).txt  obs_prob_nav(1,14).txt  obs_prob_nav(1,2).txt  obs_prob_nav(1,27).txt  obs_prob_nav(1,3).txt  obs_prob_nav(1,4).txt  obs_prob_nav(1,6).txt  obs_prob_nav(1,9).txt  obs_prob_nav(10,11).txt  obs_prob_nav(10,12).txt  obs_prob_nav(10,13).txt  obs_prob_nav(10,14).txt  obs_prob_nav(10,21).txt  obs_prob_nav(10,22).txt  obs_prob_nav(10,23).txt  obs_prob_nav(10,39).txt  obs_prob_nav(11,13).txt  obs_prob_nav(11,14).txt  obs_prob_nav(11,15).txt  obs_prob_nav(11,22).txt  obs_prob_nav(11,23).txt  obs_prob_nav(12,13).txt  obs_prob_nav(13,14).txt  obs_prob_nav(13,40).txt  obs_prob_nav(14,15).txt  obs_prob_nav(15,16).txt  obs_prob_nav(16,17).txt  obs_prob_nav(16,19).txt  obs_prob_nav(16,20).txt  obs_prob_nav(16,22).txt  obs_prob_nav(16,23).txt  (+214 more)
src/multi_scale_search/: __init__.py  actions.py  agents.py  auxiliary_functions.py  belief.py  core.py
(+30 files in other folders)
