<?xml version="1.0"?>
<package format="2">
  <name>multi_scale_search</name>
  <version>0.1.0</version>
  <description>Multi-scale object search</description>

  <maintainer email="luch@ethz.ch">Luc Holzherr</maintainer>
  <author>Luc Holzherr</author>
  <author>Michel Breyer</author>
  <author>Julian Förster</author>
  <author>Jen Jen Chung</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
